# SpeechContestProcessManagementSystem_HM

./: .clangd  CMakeLists.txt  README.md
include/: speaker.h  speechManager.h
src/: CMakeLists.txt  speechContestProcessManagementSystem.cpp  speechManager.cpp
